--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "dotenv": "^16.4.7",
+    "framer-motion": "^12.0.5",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.6",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^6.28.0",
     "sweetalert2": "^11.14.5"
   },
